src/test/deca/context/invalid/created/Objet/Passe_1/UnknownExtends.deca
// Description:
//    teste la declaration d'une classe en tant qu'extension d'une classe inexistante
// Resultats:
//    UnknownExtends.deca:6:0: Error: The parent is not defined

class B extends A {

}

{

}